# pyfakefs

./: .buildinfo  .dockerignore  .gitignore  .hgignore  .pre-commit-config.yaml  .pylintrc  .readthedocs.yaml  .travis.yml  CHANGES.md  CONTRIBUTING.md  Dockerfile  MANIFEST.in  README  README.md  TODO.md  all_tests.py  appveyor.yml  build-docs.sh  conftest.py  dynamic_patch_test.py  example.py  example_test.py  extra_requirements.txt  fake_filesystem.py  fake_filesystem_glob.py  fake_filesystem_glob_test.py  fake_filesystem_shutil.py  fake_filesystem_shutil_test.py  fake_filesystem_test.py  fake_filesystem_unittest.py  fake_filesystem_unittest_test.py  fake_filesystem_vs_real_test.py  fake_pathlib_test.py  fake_tempfile.py  fake_tempfile_test.py  genindex.html  index.html  intro.html  legacy_requirements.txt  modules.html  (+16 more)
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/PULL_REQUEST_TEMPLATE/: code_pr.md  documentation_pr.md
.github/workflows/: builddocs.yml  dockertests.yml  pythonpackage.yml  release-deploy.yml  run_pytest.sh  testsuite.yml
.travis/: docker_tests.sh  install.sh  run_failed_pytest_plugin_test.sh  run_flake.sh  run_pytest.sh  run_pytest_fixture_param_test.sh  run_pytest_fixture_test.sh  run_pytest_plugin_test.sh  run_tests.sh  run_tests_as_root.sh  run_tests_no_extra_packages.sh  run_tests_with_extra_packages.sh  run_tests_without_extra_packages.sh
.travis/dockerfiles/: Dockerfile_centos  Dockerfile_fedora
3.3/: index.html
_sources/: index.txt  intro.rst.txt  pyfakefs.txt  usage.txt
docs/: Makefile  autopatch.rst  conf.py  contributing.rst  convenience.rst  customize.rst  index.rst  intro.rst  license.rst  make.bat  modules.rst  python_versions.rst  release_notes.rst  requirements.txt  troubleshooting.rst  usage.rst
docs/pyfakefs_theme/: theme.conf
doctrees/: environment.pickle  index.doctree  intro.doctree  modules.doctree  pyfakefs.doctree  usage.doctree
fixtures/: module_with_attributes.py
html/: genindex.html  objects.inv  search.html  searchindex.js
main/: .buildinfo  api.html  autopatch.html  genindex.html  index.html  intro.html  modules.html  objects.inv  py-modindex.html  search.html  searchindex.js  troubleshooting.html  usage.html
main/_sources/: api.rst.txt  index.rst.txt  modules.rst.txt  troubleshooting.rst.txt  usage.rst.txt
main/_static/: documentation_options.js  pyfakefs.css
main/doctrees/: autopatch.doctree  environment.pickle  index.doctree  intro.doctree  troubleshooting.doctree  usage.doctree
master/: .buildinfo  api.html  autopatch.html  genindex.html  index.html  intro.html  modules.html  objects.inv  py-modindex.html  search.html  searchindex.js  troubleshooting.html  usage.html
master/_sources/: api.rst.txt  autopatch.rst.txt  index.rst.txt  intro.rst.txt  modules.rst.txt  usage.rst.txt
master/_static/: documentation_options.js
master/doctrees/: api.doctree  autopatch.doctree  environment.pickle  index.doctree  intro.doctree  modules.doctree  troubleshooting.doctree  usage.doctree
pyfakefs/: _version.py  deprecator.py  extra_packages.py  fake_file.py  fake_filesystem.py  fake_filesystem_glob.py  fake_filesystem_shutil.py  fake_filesystem_unittest.py  fake_io.py  fake_open.py  fake_os.py  fake_path.py  fake_pathlib.py  fake_scandir.py  fake_tempfile.py  helpers.py  mox3_stubout.py  patched_packages.py  pytest_module.py  pytest_plugin.py
pyfakefs/pytest_tests/: conftest.py  example.py  fake_fcntl_test.py  io.py  lib_using_pathlib.py  local_import.py  pytest_check_failed_plugin_test.py  pytest_doctest_test.py  pytest_fixture_param_test.py  pytest_fixture_test.py  pytest_module_fixture_test.py  pytest_path_hint_test.py  pytest_plugin_failing_helper.py  pytest_plugin_test.py  pytest_reload_pandas_test.py  segfault_test.py  test_fs_with_monkeypatch.py  test_patch_on_setup.py  test_reload_local_import.py  unhashable.py
pyfakefs/tests/: all_tests.py  all_tests_without_extra_packages.py  dynamic_patch_test.py  example.py  example_test.py  fake_filesystem_glob_test.py  fake_filesystem_shutil_test.py  fake_filesystem_test.py  fake_filesystem_unittest_test.py  fake_filesystem_vs_real_test.py  fake_legacy_modules_test.py  fake_open_test.py  fake_os_test.py  fake_pathlib_test.py  fake_stat_time_test.py  fake_tempfile_test.py  import_as_example.py  logsio.py  mox3_stubout_example.py  mox3_stubout_test.py  patched_packages_test.py  performance_test.py  pytest_check_failed_plugin_test.py  pytest_doctest_test.py  pytest_plugin_failing_test.py  skip_open.py  skipped_pathlib.py  test_utils.py
release/: .buildinfo  api.html  autopatch.html  convenience_methods.html  customizing_tests.html  genindex.html  index.html  intro.html  modules.html  objects.inv  py-modindex.html  search.html  searchindex.js  troubleshooting.html  usage.html
release/_sources/: autopatch.rst.txt  convenience_methods.rst.txt  index.rst.txt  intro.rst.txt  modules.rst.txt  usage.rst.txt
release/_static/: documentation_options.js
release/doctrees/: api.doctree  autopatch.doctree  convenience_methods.doctree  customizing_tests.doctree  environment.pickle  index.doctree  intro.doctree  modules.doctree  test_scenarios.doctree  troubleshooting.doctree  usage.doctree
release33/: index.html  intro.html  py-modindex.html  usage.html
release33/_sources/: intro.rst.txt
release33/doctrees/: intro.doctree  modules.doctree  usage.doctree
release37/: .buildinfo  api.html  autopatch.html  genindex.html  index.html  intro.html  modules.html  objects.inv  py-modindex.html  search.html  searchindex.js  test_scenarios.html  usage.html
release37/_sources/: autopatch.rst.txt  (+3 more)
tests/: all_tests.py  dynamic_patch_test.py  example.py  example_test.py  fake_filesystem_glob_test.py  fake_filesystem_shutil_test.py  fake_filesystem_test.py  fake_filesystem_unittest_test.py  fake_filesystem_vs_real_test.py  fake_open_test.py  fake_os_test.py  fake_pathlib_test.py  fake_tempfile_test.py  import_as_example.py  mox3_stubout_example.py  mox3_stubout_test.py  pytest_doctest_test.py  test_utils.py
(+26 files in other folders)
