[metadata]
name = pyfakefs
version = attr: pyfakefs.__version__
author = Google
author_email = google-pyfakefs@google.com
maintainer = John McGehee
maintainer_email = pyfakefs@johnnado.com
license = http://www.apache.org/licenses/LICENSE-2.0
description = pyfakefs implements a fake file system that mocks the Python file system modules.
long_description = file: README.md
long_description_content_type = text/markdown
keywords =
    testing
    test
    file
    os
    shutil
    pathlib
    mocking
    unittest
    pytest
    fakes
    filesystem
url = https://github.com/pytest-dev/pyfakefs
classifiers =
    Development Status :: 5 - Production/Stable
    Environment :: Console
    Intended Audience :: Developers
    License :: OSI Approved :: Apache Software License
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Programming Language :: Python :: Implementation :: CPython
    Programming Language :: Python :: Implementation :: PyPy
    Operating System :: POSIX
    Operating System :: MacOS
    Operating System :: Microsoft :: Windows
    Topic :: Software Development :: Libraries
    Topic :: Software Development :: Libraries :: Python Modules
    Topic :: Software Development :: Testing
    Topic :: System :: Filesystems
    Framework :: Pytest

[bdist_wheel]
universal = 0

[options]
packages = find:
install_requires =
python_requires = >=3.7
test_suite = pyfakefs.tests

[options.packages.find]
exclude = docs

[options.entry_points]
pytest11 =
    pytest_fakefs = pyfakefs.pytest_plugin
